# gas-fair-calendar

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  update-data.yml  update-events.yml
backend/: README.md  app.py
config/: sources.yaml
data/: events_frontend.json  events_master.json  scan_jobs.json  sources.json
data/backups/: README.md  events_master-20260421-131226.json  events_master-20260421-131404.json
gas_fair_calendar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: auto_update.py  export_excel.py
src/gas_fair_calendar/: __init__.py  build_html.py  cli.py  dedupe.py  discovery.py  export_excel.py  frontend.py  io_json.py  merge.py  models.py  pipeline.py  reporting.py  seed.py  seed_from_html.py  settings.py  update_pipeline.py  utils.py  validation.py
src/gas_fair_calendar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gas_fair_calendar/collectors/: base.py  http_html.py  playwright_collector.py
src/gas_fair_calendar/templates/: dashboard_original.html.j2  index.html.j2
tests/: test_seed_and_pipeline.py  test_seed_from_html.py  test_validation.py
