[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-fair-calendar"
version = "2.0.0"
description = "Automatic gas, LNG, LPG and industrial energy fair calendar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "jinja2>=3.1",
  "lxml>=5.3",
  "openpyxl>=3.1",
  "playwright>=1.55",
  "pydantic>=2.9",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
  "requests>=2.32",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8.3",
]

[project.scripts]
gas-fair-calendar = "gas_fair_calendar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
